src/main/resources/ui/lobby/create_game/createGame.css
.createGame {
    -fx-pref-width: 350;
    -fx-pref-height: 300;
    -fx-background-color: rgba(18,18,18, 0.9);
    -fx-border-width: 2;
    -fx-border-color: white;
}

.label {
    -fx-text-fill: white;
    -fx-font-size: 26;
    -fx-font-weight: bold;
}

.text-field {
    -fx-pref-width: 330;
    -fx-font-size: 16;
    -fx-font-weight: bold;
    -fx-text-fill: -on-primary-fill;
    -fx-background-color:-surface-elevation-8-color;
    -fx-border-color: -primary-lighter-background-color;
    -fx-border-width: 2px;
    -fx-alignment: center;
}

.toggle-button {
    -fx-border-width: 0;
    -fx-background-color: -primary-background-color;
    -fx-border-radius: 0;
    -fx-font-weight: bold;
    -fx-font-size: 16;
    -fx-text-fill: -on-primary-fill;
    -fx-pref-width: 160;
    -fx-pref-height: 40;
}

.toggle-button:selected {
    -fx-background-color: -selected-background-color;
    -fx-text-fill: -on-hovered-fill;
}

.toggle-button:hover {
    -fx-background-color: -primary-lighter-background-color;
    -fx-text-fill: -on-hovered-fill;
}

